fic(swagger): fix swagger resource names
